2005-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py:
	Add radio property to Column and set the radio property of
	the CellRendererToggle if it's set to True. Add a new callback
	for handling CellRendererToogle::toggled which updates the value
	of the model.

2005-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): 
	Add check for sortable, add a searchable check.
	(Column): Add a searchable property.
	(List._setup_column): Set up a search equal func
	(List._search_equal_func): Define here, checks if 
	the string starts with the value, seems to be the expected behavior.

2005-09-01  Henrique Romano  <henrique@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): 
	Just verifying if more than one column has the sorted attribute, if 
	so raise ValueError.

2005-06-14  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py: Update to work with gazpacho trunk. 
	Add better data-type filters for various widgets.
	
2005-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column, List): Add support for cell editing.

2005-08-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column): subclass GObject implicitly.

	* kiwi/utils.py (PropertyObject): update to use ClassInittableObject
	refactor a little bit and add extra checks so we don't accidentally
	try to register a GObject type for it.
	Move out so it's not a subclass of GObject, but require it to
	be a subclass of GObject, this will make it possible to use
	the class for GObject subclasses

	* kiwi/python.py: New file, add ClassInittableObject.

2005-07-29  Johan Dahlin  <jdahlin@async.com.br>

	* bin/kiwi-i18n:
	* kiwi/i18n/__init__.py:
	* kiwi/i18n/i18n.py:
	* kiwi/i18n/msgfmt.py:
	* kiwi/i18n/pygettext.py:
	Add kiwi-i18n and copy in msgfmt/pygettext from the python 
	distribution, modify msgfmt slightly to be usable from outside