@@ -1,4 +1,16 @@
+2005-09-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/datatypes.py (FloatConverter._filter_locale): Rewrite, easier 
+	to read and understand now. Can't remember all bugs it fixes.
+	(IntConverter.from_string): Remove the thousand separators.
+
 2005-09-05  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/datatypes.py (format_price): Implement a function to format
+	a number according to the current currency.
+
+	* tests/test_datatypes.py (DataTypesTest.testFormatPrice): 
+	some basic tests.
 
 	* kiwi/ui/widgets/list.py:
 	Add radio property to Column and set the radio property of
